<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ita_flag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/we_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:text="@string/we_text"
            android:textAlignment="textEnd"
            android:textSize="@dimen/size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tra_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/tra_text"
            android:textAlignment="center"
            android:textSize="@dimen/size_header"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vel_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/vel_text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/size_header"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/small_padding"
        android:layout_below="@+id/ita_flag">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/colosseum"
                android:layout_width="match_parent"
                android:layout_height="@dimen/colosseum_height"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="center"
                android:contentDescription="@string/item_icon"
                android:src="@drawable/colosseum" />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/colosseum"
                android:layout_margin="@dimen/margin_default"
                android:textColor="@color/black"
                android:text="@string/header"
                android:textAlignment="textStart"
                android:textSize="@dimen/company_size" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/header"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:background="@color/divider_color" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@id/divider"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/ic_place_black_24dp"
                android:contentDescription="@string/item_icon" />


            <ImageView
                android:id="@+id/clock_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@id/location_icon"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/ic_query_builder_black_24dp"
                android:contentDescription="@string/item_icon" />

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@id/clock_icon"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/ic_phone_black_24dp"
                android:contentDescription="@string/item_icon" />


            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_alignTop="@id/location_icon"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_toEndOf="@id/location_icon"
                android:textColor="@color/black"
                android:text="@string/location_item"
                android:textAlignment="textStart"
                android:textSize="@dimen/info_size" />

            <TextView
                android:id="@+id/schedule_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location_icon"
                android:layout_alignTop="@id/clock_icon"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_toEndOf="@id/clock_icon"
                android:textColor="@color/black"
                android:text="@string/clock_item"
                android:textAlignment="textStart"
                android:textSize="@dimen/info_size" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/clock_icon"
                android:layout_alignTop="@id/phone_icon"
                android:layout_marginStart="@dimen/margin_middle"
                android:layout_toEndOf="@id/phone_icon"
                android:textColor="@color/black"
                android:text="@string/phone_item"
                android:textAlignment="textStart"
                android:textSize="@dimen/info_size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_icon"
                android:text="@string/desc_agency"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/desc_size" />

            <LinearLayout
                android:id="@+id/icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginTop="@dimen/margin_default"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ice_cream"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:background="@drawable/ice_cream"
                    android:layout_margin="@dimen/margin_default"
                    android:contentDescription="@string/item_icon" />

                <ImageView
                    android:id="@+id/plane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_flight_takeoff_black_24dp"
                    android:layout_margin="@dimen/margin_default"
                    android:contentDescription="@string/item_icon" />

                <ImageView
                    android:id="@+id/pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:background="@drawable/ic_local_pizza_black_24dp"
                    android:contentDescription="@string/item_icon" />

                <ImageView
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_restaurant_black_24dp"
                    android:layout_margin="@dimen/margin_default"
                    android:contentDescription="@string/item_icon" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>